css adjust and readme create

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <article>
 
         <section>
-            <div class="ingredientes">
+
+            <div class="ingredients">
                 <h2>INGREDIENTES:</h2>
                 <ul> 
                     <li>2 xicaras (cha) de Carinha de cago</li>
@@ -39,11 +40,14 @@
                     <li>1 a 3/4 de xicara (cha) de leite</li>
                 </ul>
             </div>
+
         </section>
 
         <section>
+
             <div class="prepare">
                 <h2>MODO DE PREPARO:</h2>
+
                 <ol>
                     <li>Peneire em um recipiente a farinhas de trigo, o açucar, o amido, o fermento e o sal. Reserve.</li>
                     <li>Em outro recipiente misture os ovos batidos com o leite, a manterga derretida e a essência de baunilha</li>
@@ -51,22 +55,36 @@
                     <li>Aqueça o aparelho para Wattles. Coloque uma cocha rasa de massa e espalhe até cobrir o molde do aparelho, feche a tampa e deixe assar até a massa ficar bem dourada.</li>
                     <li>Retire cora espátelas de silicone. Sirva com mel, frutas ou geleia</li>
                 </ol>
+
             </div>
+
         </section>
 
         <section>
-            <div>
+
+            <div class="additionalInformation">
                 <h2>Informações adicionais</h2>
                 <p>Você pode servir os waffles no café da manhã com geleia.</p>
-            </div>    
+
+            </div>  
+
         </section>
 
     </article>
 
     <footer>
-        <div>
-            Feito com <img src="./assets/yellow-heart-26.png" alt="Imagem de coração amarelo"> por <a href="https://github.com/johnwilker">John. <img src="./assets/github.svg" alt="Imagem do github"></a>    
-        </div>        
+
+        <div class="credits">
+            Feito com <img src="./assets/yellow-heart-26.png" alt="Imagem de coração amarelo">
+            por John.
+            <ul>
+                <li><a href="https://github.com/johnwilker"><img src="./assets/github.svg" alt="Imagem do github"></a></li>
+                <li><a href="https://www.linkedin.com/in/johnwilkers/"><img src="./assets/blue-linkedin-26.png" alt="Imagem do linkedin"></a></li>
+                <li><a href="https://www.instagram.com/john_wilkers/"><img src="./assets/black-instagram-26.png" alt="Imagem do instagram"></a> </li>
+            </ul>
+
+        </div>
+
     </footer>
     
 </body>
